<resources>
    <string name="app_name">OneThing</string>
    <string name="action_settings">Settings</string>
    <string name="TimerName">Timer Name</string>
    <string name="zero">00:00</string>
    <string name="NextTimer">Next Timer Name</string>
    <string name="EnterTimerName">Enter a Timer Name</string>
    <string name="FiveMinutes">5 Min</string>
    <string name="TenMinutes">10 Min</string>
    <string name="Custom">Custom</string>
    <string name="NextTimerBtn">Next Timer</string>
    <string name="PlayPauseBtn">Play/Pause Timer</string>
    <string name="TimeInMinutes">Time in Minutes</string>
    <string name="info">Info</string>
    <string name="action_info">info</string>
    <string name="activity_info">InfoActivity</string>
    <string name="info_paragraph">
        -------- To use --------\n\n
        - Enter a timer name\n
        - Select either a default time or enter one\n
        - You can start the timer whenever\n
        - You can add as many timers as you\'d like\n\n
        For More Info on OneThing:\n
        jakedawkins.com/projects/onething.php\n\n

        -------- Acknowledgments--------\n\n
        - Resizing Images: resizing images stackoverflow.com/questions/6267733/android-resizing-imageview-in-xml\n\n
        - Enabling Up Button Navigation: developer.android.com/training/appbar/up-action.html\n\n
        - Starting Another Activity: developer.android.com/training/basics/firstapp/starting-activity.html\n\n
        - Rob Percival (CodeStars): http://codestars.usefedora.com/courses/the-complete-android-developer-course\n\n
        - Hiding Keyboard: https://stackoverflow.com/questions/8697499/hide-keyboard-when-user-taps-anywhere-else-on-the-screen-in-android
    </string>
    <string name="title_activity_task_list">TaskList</string>
</resources>
