<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jakedawkins.onething.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TimerName"
        android:id="@+id/runningTimerName"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/timerDisplay"
        android:layout_below="@+id/runningTimerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NextTimer"
        android:id="@+id/nextTimerName"
        android:layout_below="@+id/timerDisplay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nextTimerName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/linearOne">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:hint="@string/EnterTimerName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FiveMinutes"
            android:id="@+id/button"
            android:onClick="newTimer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TenMinutes"
            android:id="@+id/button2"
            android:onClick="newTimer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearOne"
        android:id="@+id/linearTwo">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTime"
            android:hint="@string/TimeInMinutes" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Custom"
            android:id="@+id/button3"
            android:onClick="newTimer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearTwo"
        android:layout_marginTop="50dp"
        android:id="@+id/timerControlLayout">

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/playPauseButton"
            android:src="@drawable/play"
            android:background="#00efefef"
            android:scaleType="fitCenter"
            android:onClick="playPauseTimer"
            android:contentDescription="@string/PlayPauseBtn"
             />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/nextButton"
            android:src="@drawable/next"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:onClick="nextTimer"
            android:contentDescription="@string/NextTimerBtn"
             />
    </LinearLayout>

</RelativeLayout>
